Add info layout; move 404 & about to it.

--- a/404.md
+++ b/404.md
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: info
+title: 404
 ---
-404: Not Found
-==============
-Uh oh! The page you were looking for is not available.
+Uh oh! The page you were looking for was not found.
 
-[Return home](index.html)
+[**Return home**](index.html)
